<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_most_popular">Most Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="movie_poster_content">Place holder for image content</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="post_of_the_movie">Post of the movie</string>
    <string name="Network_Error_Prompt">There is no internet or api did not respond.</string>
    <string name="Error_MovieData_Not_Found">Movie data is not available.</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="Favorite">Favorite</string>
    <string name="review_label">Reviews</string>
    <string name="data_key_review">reviews</string>
    <string name="data_key_video">videos</string>
    <string name="trailer_label">Trailers</string>
    <string name="DATABASE_ERROR_PROMPT">Could not retrieve result from Database</string>
    <string name="trailer_content_description">Youtube video content</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
</resources>
