<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            tools:context="com.benktesh.popularmovies.DetailedActivity">

            <TextView
                android:id="@+id/tv_original_title"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding"
                tools:text="Fifty Shades Freed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/post_of_the_movie"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rbv_user_rating"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="10"
                        android:paddingBottom="@dimen/padding" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/padding"
                        tools:text="10/10/2010" />

                    <Button
                        android:id="@+id/bv_add_to_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/button_padding_10dp"
                        android:layout_gravity="bottom"
                        android:text="@string/mark_as_favorite" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:text="@string/synopsis_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_synopsis"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Fifty Shades Freed is test synopsis" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer_label"
                    android:paddingTop="@dimen/padding"
                    android:textStyle="bold" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:clipToPadding="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingTop="@dimen/padding"
                android:text="@string/review_label"
                android:textStyle="bold"
               />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:clipToPadding="true" />








        </LinearLayout>
    </ScrollView>
</layout>